load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["password_reader_mock.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/cmd/mock",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_mock//gomock:go_default_library"],
)
