load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mclock.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/time/mclock",
    visibility = ["//visibility:public"],
    deps = ["@com_github_aristanetworks_goarista//monotime:go_default_library"],
)
