load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["policies.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/testing/endtoend/policies",
    visibility = ["//visibility:public"],
    deps = ["//consensus-types/primitives:go_default_library"],
)
