load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "health.go",
        "interfaces.go",
        "mock.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/api/client/beacon/health",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_mock//gomock:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["health_test.go"],
    embed = [":go_default_library"],
    deps = ["@org_uber_go_mock//gomock:go_default_library"],
)
