load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "handlers.go",
        "server.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/beacon-chain/rpc/eth/light-client",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//api:go_default_library",
        "//api/server/structs:go_default_library",
        "//beacon-chain/blockchain:go_default_library",
        "//beacon-chain/core/light-client:go_default_library",
        "//beacon-chain/core/signing:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/rpc/eth/shared:go_default_library",
        "//beacon-chain/rpc/lookup:go_default_library",
        "//config/features:go_default_library",
        "//config/params:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//monitoring/tracing/trace:go_default_library",
        "//network/forks:go_default_library",
        "//network/httputil:go_default_library",
        "//runtime/version:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_prysmaticlabs_fastssz//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "handlers_test.go",
        "helpers_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//api/server/structs:go_default_library",
        "//beacon-chain/blockchain/testing:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/core/light-client:go_default_library",
        "//beacon-chain/db/testing:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//config/features:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/light-client:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//proto/engine/v1:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/version:go_default_library",
        "//testing/require:go_default_library",
        "//testing/util:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_prysmaticlabs_fastssz//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
