load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["custody_groups.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/testing/spectest/shared/fulu/networking",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/core/peerdas:go_default_library",
        "//testing/require:go_default_library",
        "//testing/spectest/utils:go_default_library",
        "//testing/util:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/enode:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)
